bk_ida/gccida/c1/gen_inlined_subroutine_die
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_inlined_subroutine_die/src/dwarf2out.c:11086:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_inlined_subroutine_die/src/dwarf2out.c:11101:40: error: use of undeclared identifier 'off_624A4C'
sprintf( v6, "*.%s%u", ( const char *)&off_624A4C, stmt->identifier.id.len >> 2); 
                                       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_inlined_subroutine_die/src/obj/dwarf2out.o] Error 1
